--- a/video.html
+++ b/video.html
@@ -42,7 +42,7 @@
             <!-- Nav tabs -->
             <ul class="mt-5 nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#search_result">搜索结果</a>
+                    <a id=“nav-result” class="nav-link active" data-toggle="tab" href="#search_result">搜索结果</a>
                 </li>
                 <li class="nav-item">
                     <a id="nav-episode" class="nav-link" data-toggle="tab" href="#episode">剧集列表</a>
