--- a/index.html
+++ b/index.html
@@ -10,25 +10,53 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/video_style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
  </head>
-<body data-gr-c-s-loaded="true" >
+<body>
+<nav class="navbar navbar-expand-sm bg-light">
+    <div class="container d-flex justify-content-lg-start">
+        <!-- 设置的icon -->
+        <span style="color: black;">
+            <i class="fas fa-cog fa-lg"></i>
+        </span>
+
+        <!-- 设置浏览器 -->
+        <div class="nav-item dropdown ml-3">
+            <a class="nav-link dropdown-toggle text-dark" href="#" id="browerDrop" data-toggle="dropdown">
+                浏览器
+            </a>
+            <div class="dropdown-menu dropdown-menu-lg">
+                <form class="mt-1">
+                    <div class="form-check ml-2">
+                        <label class="form-control-label" for="General-brower" >
+                            <input type="radio" class="form-check-input" id="General-brower" name="brower" value="General-brower" checked>
+                            通用
+                        </label>
+                    </div>
+                    <div class="form-check ml-2">
+                        <label class="form-control-label" for="Safari">
+                            <input type="radio" class="form-check-input" id="Safari" name="brower" value="Safari">
+                            Safari
+                        </label>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+</nav>
 
 <div class="container p-3 ">
-
-    <div class="shadow-lg p-4 mb-4 mt-4  panel" >
+    <div class="shadow-lg p-4 mb-4 mt-4 panel" >
         <h4 class="display-4">小剧场
             <button class="font-weight-bold btn btn-sm btn-dark">
-                BETA  <span class="font-weight-bolder badge badge-light">3.0</span>
+                BETA  <span class="font-weight-bolder badge badge-light">3.1</span>
         </button></h4>
         <!-- 解释行-->
         <p>请尽量使用<kbd>中文</kbd>搜索内容，如是外语片，请使用<kbd>官方译名</kbd></p>
 
-        <div class="shadow-sm p-4 mb-4 bg-white input-group">
-            <!-- 设置按键 -->
-            <button class="btn btn-secondary rounded dropdown-toggle" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <strong>设置</strong>
-
-            </button>
+        <div class="shadow-sm mb-4 bg-white input-group">
 
             <!-- 输入框 -->
             <input type="text" class="form-control " id="search_box" placeholder="请输入剧集...">
@@ -38,21 +66,8 @@
                 <button type="button" class="btn btn-outline-secondary" id="submit-block">搜索</button>
             </div>
 
-            <!-- 设置页面 -->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="nav nav-pills">
-                    <li class="nav-item mt-2 ml-2 pl-2">
-                        <form class="mt-2">
-                            <div class="custom-control custom-switch">
-                                <input type="checkbox" class="custom-control-input" id="Safari">
-                                <label class="custom-control-label" for="Safari">Safari</label>
-                            </div>
-                        </form>
-                    </li>
-
-                </ul>
-            </div>
         </div>
+
 
         <!-- 成功、失败和等待提示框-->
         <!-- 成功  -->
