--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/video_style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/all.css">
+    <script src="js/all.js"></script>
 
  </head>
 <body>
@@ -51,7 +52,7 @@
     <div class="shadow-lg p-4 mb-4 mt-4 panel" >
         <h4 class="display-4">小剧场
             <button class="font-weight-bold btn btn-sm btn-dark">
-                BETA  <span class="font-weight-bolder badge badge-light">3.1</span>
+                BETA  <span class="font-weight-bolder badge badge-light">3.1.1</span>
         </button></h4>
         <!-- 解释行-->
         <p>请尽量使用<kbd>中文</kbd>搜索内容，如是外语片，请使用<kbd>官方译名</kbd></p>
