修改默认源文件

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                     <div class="row form-check ml-2" onclick="browser_on_click()">
                         <label class="form-control-label radio-label" for="General-browser" >
                             <i class="fas fa-check fa-lg"></i>
-                            <input type="radio" class="form-check-input" id="General-browser" name="browser" value="General-browser" checked>
+                            <input type="radio" class="form-check-input" id="General-browser" name="browser" value="General-browser">
                             <strong class="ml-1">通用</strong>
                         </label>
                     </div>
                     <div class="row form-check ml-2" onclick="browser_on_click()">
                         <label class="form-control-label" for="Safari">
                             <i class="fas fa-check fa-lg"></i>
-                            <input type="radio" class="form-check-input" id="Safari" name="browser" value="Safari">
+                            <input type="radio" class="form-check-input" id="Safari" name="browser" value="Safari" checked>
                             <strong class="ml-1">Safari</strong>
                         </label>
                     </div>
